Fixed contact button sizes & icon clipping

--- a/app/components/Contacts/ContactsPanel/ContactsPanel.scss
+++ b/app/components/Contacts/ContactsPanel/ContactsPanel.scss
@@ -53,10 +53,12 @@
       align-items: center;
 
       .editButton {
+        width: 130px;
         margin-right: 10px;
       }
 
       .deleteButton {
+        width: 250px;
       }
     }
   }
